--- a/.travis.yml
+++ b/.travis.yml
@@ -160,8 +160,11 @@ after_success:
   - cd "${TRAVIS_BUILD_DIR}"
   # macOS needs `--gcov-tool /usr/local/bin/gcov-?`, but even then I couldn't make the Coverage run work
   - |
-    if [ "$TRAVIS_OS_NAME" = "linux" ] && [ -z "$TRAVIS_TAG" ] && [ -z "$TRAVIS_JOB_NAME" ]; then
-      cd build
-      cmake --build . -- cov-info
-      bash <(curl -s https://codecov.io/bash) -f coverage.info || echo "Codecov did not collect coverage reports"
+    if [ "$TRAVIS_OS_NAME" = "linux" ] && [ -z "$TRAVIS_TAG" ] 
+      echo "$TRAVIS_JOB_NAME"
+      if [ "$TRAVIS_JOB_NAME" != "C" ]; then
+         cd build
+     	 cmake --build . -- cov-info
+      	 bash <(curl -s https://codecov.io/bash) -f coverage.info || echo "Codecov did not collect coverage reports"
+      fi
     fi
