--- a/.travis.yml
+++ b/.travis.yml
@@ -159,9 +159,11 @@ script:  # multiplied by matrix envs and os settings
 after_success:
   - cd "${TRAVIS_BUILD_DIR}"
   # macOS needs `--gcov-tool /usr/local/bin/gcov-?`, but even then I couldn't make the Coverage run work
+  - echo "${TRAVIS_TAG}
+  - echo "${TRAVIS_JOB_NAME}"
   - |
     if [ "$TRAVIS_OS_NAME" = "linux" ] && [ -z "$TRAVIS_TAG" ]; then
-      echo "$TRAVIS_JOB_NAME"
+      echo "${TRAVIS_JOB_NAME}"
       if [ "$TRAVIS_JOB_NAME" != "C" ]; then
          cd build
      	 cmake --build . -- cov-info
