Remove tag for release distribution

--- a/.travis.yml
+++ b/.travis.yml
@@ -86,8 +86,8 @@ jobs:  # the following jobs inherit only the first OS
       file: build/dist/*
       draft: true
       # the following 2 lines work around an issue in TravisCI with draft=true:
-      tag_name: $TRAVIS_TAG
-      target_commitish: $TRAVIS_COMMIT
+#      tag_name: $TRAVIS_TAG
+#      target_commitish: $TRAVIS_COMMIT
       on:
         repo: cp2k/dbcsr
         tags: true  # default is "restricted by branch"
