docker: include rsyncc for deployment

--- a/tools/docker/Dockerfile.build-env-ubuntu
+++ b/tools/docker/Dockerfile.build-env-ubuntu
@@ -21,6 +21,7 @@ RUN apt-get update \
         python3-pip \
         unzip \
         curl \
+        rsync \
     && rm -rf /var/lib/apt/lists/* \
     && localedef -i en_US -c -f UTF-8 -A /usr/share/locale/locale.alias en_US.UTF-8
 
