--- a/.github/workflows/doc-generation.yml
+++ b/.github/workflows/doc-generation.yml
@@ -61,14 +61,18 @@ jobs:
         CLEAN: true
         CLEAN_EXCLUDE: '["releases"]'
 
+    - name: Get the release version
+      id: get_version
+      run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\/v/}
+
     - name: Deploy Release Documentation
-      if: github.repository == 'cp2k/dbcsr' && startsWith(github.ref, 'v')
+      if: github.repository == 'cp2k/dbcsr' && contains(github.ref, 'tags')
       uses: JamesIves/github-pages-deploy-action@releases/v3
       with:
         SSH: true
         ACCESS_TOKEN: ${{ secrets.GHPAGES_ACCESS_TOKEN }}
         BRANCH: gh-pages
         FOLDER: build/doc
-        TARGET_FOLDER: 'releases/${{ github.ref }}'
+        TARGET_FOLDER: 'releases/v${{ steps.get_version.outputs.VERSION }}'
 
 #  vim: set ts=2 sw=2 tw=0 :
