Split Test and Example.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -332,8 +332,8 @@ if (WITH_C_API)
   # Build the C API as a separate library
   add_fypp_sources(DBCSR_C_SRCS 
 	  dbcsr_api_c.F 
-	  dbcsr_tensor_api_c.F
-	  dbcsr_tensor.h)
+	  tensors/dbcsr_tensor_api_c.F
+	  tensors/dbcsr_tensor.h)
 
   add_library(dbcsr_c ${DBCSR_C_SRCS})
   set_target_properties(dbcsr_c PROPERTIES
