pre-commit: include fprettify

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,3 +27,8 @@ repos:
     entry: '^\s*!>'
     language: pygrep
     types: [text]
+  - id: prettify
+    name: Run prettify
+    entry: ./tools/fprettify/fprettify.py
+    language: script
+    files: '^src/.*\.(F|f90)$'
