pre-commit: use flake8 from its repo (via pre-commit-hooks is deprecated)

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,10 +8,13 @@ repos:
   rev: stable
   hooks:
   - id: black
+- repo: https://gitlab.com/pycqa/flake8
+  rev: 3.7.9
+  hooks:
+  - id: flake8
 - repo: https://github.com/pre-commit/pre-commit-hooks
   rev: v2.5.0
   hooks:
-  - id: flake8
   - id: check-ast
   - id: check-yaml
 - repo: https://github.com/pseewald/fprettify
