cmake: factor out API VERSION, fix libdbcsr SONAME
this essentially fixes #283 since you can build a shared library using

    cmake -DBUILD_SHARED_LIBS=ON

The SONAME of the library will be libdbcsr.so.2.1, meaning dependencies
will have to be rebuilt after every minor version bump.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,6 +50,7 @@ endif ()
 
 project(dbcsr DESCRIPTION "DBCSR: Distributed Block Compressed Sparse Row matrix library (https://dbcsr.cp2k.org)")
 set(dbcsr_VERSION ${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}${VERSION_GIT})
+set(dbcsr_APIVERSION ${VERSION_MAJOR}.${VERSION_MINOR})
 
 # =================================================================================================
 # OPTIONS
