--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -140,7 +140,7 @@ add_library(dbcsr ${DBCSR_SRCS})
 
 set_target_properties(dbcsr PROPERTIES
   VERSION ${dbcsr_VERSION}
-  SOVERSION ${VERSION_MAJOR})
+  SOVERSION ${dbcsr_APIVERSION})
 
 if (TARGET PkgConfig::deps)
   target_link_libraries(dbcsr PRIVATE PkgConfig::deps)
@@ -340,7 +340,7 @@ if (WITH_C_API)
 
   set_target_properties(dbcsr_c PROPERTIES
     VERSION ${dbcsr_VERSION}
-    SOVERSION ${VERSION_MAJOR}.${VERSION_MINOR})
+    SOVERSION ${dbcsr_APIVERSION})
 
   target_link_libraries(dbcsr_c PRIVATE dbcsr)
   target_link_libraries(dbcsr_c PUBLIC MPI::MPI_C)  # the C API always needs MPI
