Make accblas a default requirement

--- a/.cp2k/Makefile
+++ b/.cp2k/Makefile
@@ -132,6 +132,7 @@ endif
 # If compiling with nvcc
 ifneq (,$(findstring nvcc,$(ACC)))
 override ACCFLAGS += -D__CUDA
+FCFLAGS += -D__CUDA
 CXXFLAGS += -D__CUDA
 #if "-arch" has not yet been set in ACCFLAGS
 ifeq (,$(findstring -arch,$(ACCFLAGS)))
@@ -143,6 +144,7 @@ endif
 # If compiling with hipcc
 else ifneq (,$(findstring hipcc,$(ACC)))
 override ACCFLAGS += -D__HIP
+FCFLAGS += -D__HIP
 CXXFLAGS += -D__HIP
 #if "--amdgpu-target" has not yet been set in ACCFLAGS
 ifeq (,$(findstring --amdgpu-target,$(ACCFLAGS)))
