--- a/tools/docker/Dockerfile.build-env-ubuntu
+++ b/tools/docker/Dockerfile.build-env-ubuntu
@@ -55,3 +55,7 @@ RUN set -ex && \
     && make -j -C /opt/libxsmm
 
 ENV PKG_CONFIG_PATH="/opt/libxsmm/lib:${PKG_CONFIG_PATH}"
+
+COPY lsan.supp /opt
+
+ENV LSAN_OPTIONS=suppressions=/opt/lsan.supp
