Remove Malloc wrap in Libxsmm

--- a/tools/docker/Dockerfile.build-env-ubuntu
+++ b/tools/docker/Dockerfile.build-env-ubuntu
@@ -52,10 +52,10 @@ RUN set -ex && \
 RUN set -ex && \
     curl -LsS https://github.com/hfp/libxsmm/archive/${libxsmm_version}.tar.gz | tar -xz -C /opt \
     && ln -s libxsmm-${libxsmm_version} /opt/libxsmm \
-    && make -j -C /opt/libxsmm
+    && make -j -C /opt/libxsmm MALLOC=0
 
 ENV PKG_CONFIG_PATH="/opt/libxsmm/lib:${PKG_CONFIG_PATH}"
 
+# Leak suppression
 COPY lsan.supp /opt
-
 ENV LSAN_OPTIONS=suppressions=/opt/lsan.supp
