Make cublas as a default requirement

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -39,7 +39,6 @@ add_fypp_sources(DBCSR_SRCS
   core/dbcsr_list_routinestat.F
   core/dbcsr_list_timerenv.F
   core/dbcsr_log_handling.F
-  core/dbcsr_memory_utilities.F
   core/dbcsr_print_messages.F
   core/dbcsr_timings_base_type.F
   core/dbcsr_timings.F
@@ -250,15 +249,8 @@ if (USE_CUDA)
   target_compile_definitions(acc PRIVATE __CUDA)
   target_include_directories(acc PRIVATE ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES})
   target_sources(dbcsr PRIVATE $<TARGET_OBJECTS:acc>)
-  if (USE_CUBLAS)
-    target_compile_definitions(acc PRIVATE __DBCSR_ACC=2)
-    # with CMake 3.12+ the following can be replaced by:
-    #   target_link_libraries(acc PRIVATE ${CUBLAS})
-    set_target_properties(acc PROPERTIES INTERFACE_LINK_LIBRARIES ${CUBLAS})
-  else ()
-    target_compile_definitions(acc PRIVATE __DBCSR_ACC)
-  endif ()
-
+  target_compile_definitions(acc PRIVATE __DBCSR_ACC)
+  target_link_libraries(acc PRIVATE ${CUBLAS})
 
   # tests need some of the libsmm_acc headers and for CMake <3.12
   # compatibility, we can't set it on the the object library itself
@@ -266,12 +258,9 @@ if (USE_CUDA)
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/acc/libsmm_acc>
     )
 
-  if (USE_CUBLAS)
-    target_compile_definitions(dbcsr PRIVATE __DBCSR_ACC=2)
-    target_link_libraries(dbcsr PRIVATE ${CUBLAS})
-  else ()
-    target_compile_definitions(dbcsr PRIVATE __DBCSR_ACC)
-  endif ()
+  target_compile_definitions(dbcsr PRIVATE __DBCSR_ACC)
+  target_link_libraries(dbcsr PRIVATE ${CUBLAS})
+  target_compile_definitions(dbcsr PRIVATE __CUDA)
 
   if (APPLE)
     # Help the static cuda runtime find the driver (libcuda.dyllib) at runtime.
@@ -317,12 +306,9 @@ if (USE_HIP)
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/acc/libsmm_acc>
     )
 
-  if (USE_HIPBLAS)
-    target_compile_definitions(dbcsr PRIVATE __DBCSR_ACC=3)
-    target_link_libraries(dbcsr PRIVATE ${HIPBLAS})
-  else ()
-    target_compile_definitions(dbcsr PRIVATE __DBCSR_ACC)
-  endif ()
+  target_compile_definitions(dbcsr PRIVATE __DBCSR_ACC)
+  target_link_libraries(dbcsr PRIVATE ${HIPBLAS})
+  target_compile_definitions(dbcsr PRIVATE __HIP)
 
 endif ()
 
@@ -330,8 +316,8 @@ endif ()
 # DBCSR's C API
 if (WITH_C_API)
   # Build the C API as a separate library
-  add_fypp_sources(DBCSR_C_SRCS 
-	  dbcsr_api_c.F 
+  add_fypp_sources(DBCSR_C_SRCS
+	  dbcsr_api_c.F
 	  tensors/dbcsr_tensor_api_c.F
 	  tensors/dbcsr_tensor.h)
 
