Reintroduced linking with OpenMP runtime even if DBCSR main library was not built with OpenMP. The related CMake snippet was accidentally dropped. In any case, this means the OpenMP runtime is somehow present (at least with CCE), which can may be due to applying the OpenMP-flag inconsistently.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -196,6 +196,13 @@ if (MPI_FOUND)
 endif ()
 
 # =================================================================================================
+# Link OpenMP runtime library even if DBCSR main code is not built with OpenMP
+
+if (OpenMP_FOUND)
+  target_link_libraries(dbcsr PRIVATE OpenMP::OpenMP_Fortran)
+endif ()
+
+# =================================================================================================
 # DBCSR LIBRARY's CUDA BACKEND
 
 # adapted from https://cliutils.gitlab.io/modern-cmake/chapters/packages/CUDA.html:
