cmake/hip backend: misc fixes
- remove obsolete amd-target flag
- add fPIC
- cmake/hip backend: fix timeset linking
Was broken in PR #352, but went undetected for lack of a CI of the
HIP backend

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -239,8 +239,7 @@ if (USE_HIP)
   if (${HIP_PLATFORM} STREQUAL "nvcc")
     set(HIP_HIPCC_FLAGS "${HIP_HIPCC_FLAGS} -std=c++11 -arch=sm_${ACC_ARCH_NUMBER} --cudart static")
   else()
-    set(HIP_HIPCC_FLAGS "${HIP_HIPCC_FLAGS} --amdgpu-target=${ACC_ARCH_NUMBER}")
-    set(HIP_ARCH_FLAGS "--amdgpu-target=${ACC_ARCH_NUMBER}")
+    set(HIP_HIPCC_FLAGS "${HIP_HIPCC_FLAGS} -fPIC")
   endif()
   message(STATUS "GPU target architecture: " ${WITH_GPU})
   message(STATUS "GPU architecture number: " ${ACC_ARCH_NUMBER})
