--- a/.github/workflows/testing-linux.yml
+++ b/.github/workflows/testing-linux.yml
@@ -7,6 +7,9 @@ on:
   pull_request:
 
 jobs:
+  ##################################################################################
+  # Run pre-commit
+  ##################################################################################
   pre-commit:
     runs-on: ubuntu-latest
     container:
@@ -17,6 +20,9 @@ jobs:
       run:
         pre-commit run --all-files || ( git status --short ; git diff ; exit 1 )
 
+  ##################################################################################
+  # Build and test on linux, no accelerator
+  ##################################################################################
   build-and-test:
     runs-on: ubuntu-latest
     container:
@@ -69,5 +75,35 @@ jobs:
         file: build/coverage.info
         yml: .codecov.yml
         fail_ci_if_error: true
+
+  ##################################################################################
+  # Build on ROCm
+  ##################################################################################
+  build-on-rocm:
+    runs-on: ubuntu-latest
+    container:
+      image: shoshijak/build-env-rocm:1.0
+
+    strategy:
+      matrix:
+        use_openmp: [OPENMP=ON, OPENMP=OFF]
+
+    steps:
+    - uses: actions/checkout@v2
+      with:
+        submodules: true
+
+    - name: Configure
+      run: |
+        mkdir -p build
+        cd build
+        cmake -G Ninja \
+          -DCMAKE_BUILD_TYPE=Release \
+          -DUSE_${{ matrix.use_openmp }} \
+          -DUSE_HIP=ON \
+          -DWITH_GPU=Mi50 \
+          ..
+    - name: Build
+      run: cmake --build build -- --verbose
 
 #  vim: set ts=2 sw=2 tw=0 :
